<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_product"
    android:layout_width="match_parent"
    android:layout_height="260dp"
    android:textAlignment="viewEnd">

    <androidx.cardview.widget.CardView
        android:id="@+id/product"
        android:layout_width="356dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:textAlignment="center">

            <ImageView
                android:id="@+id/card_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/txt_card_image"
                app:srcCompat="@drawable/ic_launcher_foreground"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/card_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/txt_card_name" />

            <TextView
                android:id="@+id/card_brand"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/txt_card_brand" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/card_store"
                    android:layout_width="131dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_card_store" />

                <TextView
                    android:id="@+id/card_price"
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_card_price" />

                <Button
                    android:id="@+id/card_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_card_link" />

            </TableRow>

            <Button
                android:id="@+id/card_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_card_details" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>